<resources>
    <string name="app_name">Fact@Ack</string>
    <string name="hashtag">#Fact@Ack</string>
    <string name="hashtag_append">\n\n#Fact@Ack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_submit">Submit a fact</string>
    <string name="action_about">About</string>
    <string name="action_contact">Contact</string>
    <string name="action_facts">Back to facts</string>
    <string name="action_favorites">My favorites</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_me">Contact</string>
    <string name="title_activity_about_me">About</string>
    <string name="title_activity_submit_fact">Submit A Fact</string>
    <string name="title_activity_favorite_facts">Favorite Facts</string>
    <string name="title_activity_favorite_fact_detail">FavoriteFactDetail</string>
    <string name="title_contact_me">Contact</string>
    <string name="content_about_me">My name is Michael Lewis, I was born in London, England,
        and have been writing apps for just a few months now. As my skills develop,
        so will the apps I write. In the meantime, I hope you can help, both with my development and
        with the development of these applications. Finally, I would like to dedicate this application
        to my brother, without whom, none of this would have happened. \nAll the best, \nMike</string>
    <string name="content_contact_me">Hi!\nGlad you\'re getting in touch! As a pretty fresh developer I\'m always looking for feedback from my users. I\'m not a big company with a huge research budget, so any comments you have are welcome. Feel free to send me an email by clicking on the envelope below.\n\nAll the best,\n\nMike.</string>
    <string name="content_submit_fact">Be a part of something big. Submit your facts here. We will always credit any submissions within the app, meaning your name (or nickname) will be seen and appreciated by THOUSANDS. As an added bonus, If your fact is selected to go in the
        app, you will receive the ad-free version for FREE!!! \nLet\'s make the world a more interesting, informed place :).</string>
    <string name="edittext_hint_email">Enter your email (Optional)</string>
    <string name="edittext_hint_name">Enter your name (Optional)</string>
    <string name="edittext_hint_submitfact">Enter your fact here!</string>
    <string name="toggle_text_favorite_off">Favorite?</string>
    <string name="toggle_text_favorite_on">Favorited!!!</string>
    <string name="alert_title_thanks">Thanks!</string>
    <string name="alert_title_oops">Oops!</string>
    <string name="alert_error_content_submit_empty_">Please submit a fact!</string>
    <string name="alert_error_content_submit_vulgar_">Please keep the language tasteful</string>
    <string name="alert_content_submit_thanks">Thank you! your fact has been submitted! Once/If approved,
        We\'ll send you an email to confirm your ad-free status!</string>
    <string name="alert_title_pollfish_1">BOOM!!!</string>
    <string name="alert_content_pollfish_1">You nailed that survey like a champion! %1$d More surveys and you go ad free, comrade Keep on Fact@Acking!!!</string>
    <string name="alert_positive_pollfish_1">Nice One!</string>
    <string name="alert_title_pollfish_interim">LEGENDARY!</string>
    <string name="alert_content_pollfish_interim">You\'re an answer MACHINE!!! %1$d More surveys and you go ad free comrade, Keep on Fact@Acking!!!</string>
    <string name="alert_positive_pollfish_interim">Sweet!!!</string>
    <string name="alert_positive_pollfish_final">"Lose\'em"</string>
    <string name="alert_negative_pollfish_final">"Keep\'em!"</string>
    <string name="alert_title_pollfish_final">POW!!!</string>
    <string name="alert_content_pollfish_final">You just went ad-free baby! Fact@Ack all up in yo face! Wanna lose the surveys too?</string>
    <string name="alert_positive_pollfish_pre">Sweet!!!</string>
    <string name="alert_title_pollfish_pre">Hey, You!</string>
    <string name="alert_content_pollfish_pre">Hey tiger, answer 5 of these incredibly short surveys and you go Ad-Free!</string>
    <string name="button_text_submit">Submit</string>
    <string name="email_address_me">mikeanywhere@me.com</string>
    <string name="popup_menu_item_share">Share this!</string>
    <string name="popup_menu_item_remove_favorite">Remove from favorites</string>
    <string name="button_share">Share this!</string>
    <string name="button_next_fact">Next</string>
    <string name="button_previous_fact">previous</string>
    <string name="title_main_did_you_know">Did you know?</string>
    <string name="title_favorite_number">Favorite Facts…</string>
    <string name="text_main_fact_primer">Tap the button to begin!</string>
    <string name="text_main_fact_error_all_favorited">You\'ve favorited all the facts! Updates coming soon… in the meantime, please add more via the \'submit a fact\' option in the menu!</string>
    <string name="text_swipe_instruction">Swipe your finger right to remove from favorites!</string>
    <string name="button_favorites_back_to_facts">Back to Main Facts</string>
    <string name="DEF_VAL">You have no favorites yet!</string>
</resources>