<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mike.funfactsTemplateRebuild.ContactMe" >
    <item android:id="@+id/back_to_facts"
        android:title="@string/action_facts"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_favorite"
        android:title="@string/action_favorites"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_submit"
        android:title="@string/action_submit"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
