<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".FunFactsActivity"
    android:background="#ff5cbd78"
    android:id="@+id/rLay_Favorite">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_next_fact"
        android:id="@+id/NextFavorite"
        android:background="#ffffffff"
        android:textColor="#ff5cbd78"
        android:layout_above="@+id/FavoriteShareButton"
        android:layout_toRightOf="@+id/Submit_Title"
        android:layout_toEndOf="@+id/Submit_Title" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_previous_fact"
        android:id="@+id/FavoritePreviousButton"
        android:layout_toLeftOf="@+id/NextFavorite"
        android:layout_toStartOf="@+id/NextFavorite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/FavoriteShareButton"
        android:background="#ff292929"
        android:textColor="#ffffffff" />

    <TextView
        android:text="@string/title_favorite_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="#80ffffff"
        android:id="@+id/Submit_Title" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FavoriteShareButton"
        android:textOff="@string/toggle_text_favorite_off"
        android:textOn="@string/toggle_text_favorite_on"
        android:background="#ff292929"
        android:layout_above="@+id/FavoriteRemoveButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/button_share"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_menu_item_remove_favorite"
        android:id="@+id/FavoriteRemoveButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#ee2c2c"
        android:textColor="#ffffffff" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_favorites_back_to_facts"
        android:id="@+id/ButtonBackToMainFacts"
        android:layout_above="@+id/NextFavorite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:clickable="false" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/Submit_Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/NextFavorite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView2"
            android:scrollbars="vertical"
            android:fillViewport="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/FavoriteFact"
                android:textSize="45sp"
                android:textColor="#ffffffff"
                android:layout_weight="1.0"
                android:text="@string/text_main_fact_primer"
                android:gravity="center_vertical|center_horizontal"
                />

        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/favorite_fact_bg"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:alpha="0.1"
            android:adjustViewBounds="false"
            android:src="@drawable/background_j" />


    </RelativeLayout>


</RelativeLayout>
