<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mike.funfactsTemplateRebuild.SubmitFact"
    android:background="#ff5c5356">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_submit_fact"
            android:id="@+id/detailFavFact"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textColor="#ffffffff"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/submitName"
            android:layout_marginTop="10dp"
            android:hint="@string/edittext_hint_name"
            android:textColorHint="#ffaeaeae"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/submitEmail"
            android:layout_marginTop="10dp"
            android:hint="@string/edittext_hint_email"
            android:textColorHint="#ffaeaeae" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/submitFact"
            android:hint="@string/edittext_hint_submitfact"
            android:textColorHint="#ffaeaeae" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_submit"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="#0fffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_submit_fact"
            android:id="@+id/textView4"
            android:gravity="center_horizontal"
            android:textSize="25sp"

            android:textColor="#ffffffff" />
    </LinearLayout>
</RelativeLayout>
