<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mike.funfactsTemplateRebuild.FavoriteFactDetail"
    android:id="@+id/favFactRelativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/favFactDetailed"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/factNumber"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/toggle_text_favorite_off"
        android:textOn="@string/toggle_text_favorite_on"
        android:id="@+id/toggleButton2"
        android:layout_toEndOf="@+id/factNumber"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/shareButton3"
        android:layout_alignStart="@+id/shareButton3"
        android:background="#03ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_share"
        android:id="@+id/shareButton3"
        android:layout_above="@id/toggleButton2"
        android:layout_toRightOf="@+id/factNumber"
        android:background="#03ffffff" />
</RelativeLayout>
